# chimitheque_db

./: Cargo.toml  README.md
src/: basicsearch.rs  bookmark.rs  bookmark_tests.rs  borrowing.rs  borrowing_tests.rs  casbin.rs  casbin_tests.rs  casnumber.rs  category.rs  cenumber.rs  classofcompound.rs  define.rs  empiricalformula.rs  entity.rs  entity_tests.rs  entitypeople.rs  hazardstatement.rs  hazardstatement_tests.rs  init.rs  lib.rs  linearformula.rs  name.rs  permission.rs  person.rs  personentities.rs  physicalstate.rs  precautionarystatement.rs  precautionarystatement_tests.rs  producer.rs  producer_tests.rs  producerref.rs  producerref_tests.rs  product.rs  productclassesofcompounds.rs  productclassofcompound.rs  producthazardstatements.rs  productprecautionarystatements.rs  productsupplierrefs.rs  productsymbols.rs  productsynonyms.rs  (+19 more)
src/resources/: demo.sql  ghscode_10.txt  ghscode_11.txt  migration.sql  sample.sql  shema.sql
