[package]
name = "chimitheque_db"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Bellembois <thomas.bellembois@proton.me>"]
description = "A database management library for Chimithèque"
license = "GPL-3.0"
repository = "https://github.com/tbellembois/chimitheque_db"
homepage = "https://github.com/tbellembois/chimitheque_db"
readme = "README.md"
categories = ["database", "science"]
keywords = ["chemistry", "biology", "database", "management"]
rust-version = "1.94.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
env_logger = "0.11.10"
image = { version = "0.25.10", default-features = false, features = ["png"] }
log = "0.4.29"
qrcode-png = "0.4.1"
regex = "1.12.3"
rusqlite = { version = "0.31.0", features = ["load_extension", "bundled"] }
sea-query = "0.31.0"
sea-query-rusqlite = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"

chimitheque_types = { git = "https://github.com/tbellembois/chimitheque_types.git", branch = "main" }
chimitheque_traits = { git = "https://github.com/tbellembois/chimitheque_traits.git", branch = "main" }
chimitheque_utils = { git = "https://github.com/tbellembois/chimitheque_utils.git", branch = "main" }

[patch."https://github.com/tbellembois/chimitheque_types.git"]
chimitheque_types = { path = "../chimitheque_types" }

[patch."https://github.com/tbellembois/chimitheque_traits.git"]
chimitheque_traits = { path = "../chimitheque_traits" }

[patch."https://github.com/tbellembois/chimitheque_utils.git"]
chimitheque_utils = { path = "../chimitheque_utils" }
